ecmascript/parser/tests/test262-error-references/fail/265fda17a34611b1.js.stderr
error: Unterminated string constant
 --> $DIR/tests/test262-parser/fail/265fda17a34611b1.js:1:1
  |
1 | '
  | ^

